fix z index bug on mobile safari

--- a/src/contexts/theme.css
+++ b/src/contexts/theme.css
@@ -5,7 +5,7 @@
   transition: color 0.3s ease-out;
   width: 32px;
   height: 32px;
-  z-index: 1;
+  z-index: 10;
 }
 
 .theme-toggler--dark {
