--- a/src/styles.css
+++ b/src/styles.css
@@ -559,11 +559,11 @@ html {
 
 .project-container {
   height: 432px;
-  backdrop-filter: blur(16px);
   margin: 4rem auto;
   box-shadow: 0px 0px 50px 2px rgba(0, 0, 0, 0.05);
   overflow: hidden;
   position: relative;
+  transition: background-color 0.3s;
 }
 
 .project-container--open {
@@ -576,14 +576,15 @@ html {
   right: 0;
   bottom: 0;
   overflow-y: scroll;
+  z-index: 2;
 }
 
 .project-container--dark {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgb(23, 23, 23);
 }
 
 .project-container--light {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgb(245, 245, 245)
 }
 
 .project-short-description-container {
@@ -666,6 +667,7 @@ html {
 
   .project-container--open {
     width: 100%;
+    min-height: 100vh;
   }
 
   .project-short-description-container {
